# stm32_rust

./: Debug_HOWTO_openocd.md
crates/embedded-lib/: Cargo.toml
crates/embedded-lib/src/: console.rs  lib.rs  shared_ringbuffer.rs
docker/: HowToPrepareDevEnv.md  stm32-rs-1.5.x_dockerfile
nucleo-h755zi-q/: .gitignore  openocd_stmh7x5zi.cfg
nucleo-h755zi-q-cm7_single_ledblink/: Cargo.toml
nucleo-h755zi-q-cm7_single_ledblink/src/: main.rs
nucleo-h755zi-q/cm4_usbd_serial/cm4/: memory_cm4.x
nucleo-h755zi-q/cm4_usbd_serial/cm4/.cargo/: config
nucleo-h755zi-q/cm4_usbd_serial/cm7/: link_cm7.x
nucleo-h755zi-q/cm4_usbd_simple_bulk/cm4/: Cargo.toml  link_cm4.x
nucleo-h755zi-q/cm4_usbd_simple_bulk/cm4/src/: main.rs
nucleo-h755zi-q/cm4_usbd_simple_bulk/cm7/: Cargo.toml
nucleo-h755zi-q/cm4_usbd_simple_bulk/cm7/src/: main.rs
nucleo-h755zi-q/cm7_external_intr/: Cargo.toml
nucleo-h755zi-q/cm7_external_intr/src/: main.rs
nucleo-h755zi-q/cm7_single_ledblink/: Cargo.toml
nucleo-h755zi-q/cm7_single_ledblink/src/: main.rs
nucleo-h755zi-q/cm7_single_ledblink/src/utilities/: logger.rs
nucleo-h755zi-q/cm7_single_uart/: Cargo.toml
nucleo-h755zi-q/cm7_single_uart/.cargo/: config
nucleo-h755zi-q/cm7_single_uart/src/: main.rs
nucleo-h755zi-q/dual_core_ledblink/: README.md
nucleo-h755zi-q/dual_core_ledblink/cm4_ledblink/: Cargo.toml
nucleo-h755zi-q/dual_core_ledblink/cm4_ledblink/.cargo/: config
nucleo-h755zi-q/dual_core_ledblink/cm4_ledblink/src/: main.rs
nucleo-h755zi-q/dual_core_ledblink/cm7_ledblink/: Cargo.toml
nucleo-h755zi-q/dual_core_ledblink/cm7_ledblink/src/: main.rs
nucleo-h755zi-q/dual_core_uart/cm4_uart/: Cargo.toml  memory_cm4.x
nucleo-h755zi-q/dual_core_uart/cm4_uart/src/: main.rs
nucleo-h755zi-q/dual_core_uart/cm7_uart/: Cargo.toml  memory_cm7.x
nucleo-h755zi-q/dual_core_uart/cm7_uart/.cargo/: config
nucleo-h755zi-q/dual_core_uart/cm7_uart/src/: main.rs
nucleo-h755zi-q/dual_hsem/cm4_hsem/: Cargo.toml  memory.x
nucleo-h755zi-q/dual_hsem/cm4_hsem/src/: main.rs
nucleo-h755zi-q/dual_hsem/cm4_hsem/src/utilities/: logger.rs  mod.rs
nucleo-h755zi-q/dual_hsem/cm7_hsem/: Cargo.toml  memory.x
nucleo-h755zi-q/dual_hsem/cm7_hsem/src/: main.rs
podman/: HowToPrepareDevEnv.md
stm32f4-discovery-ledblink/: Cargo.toml
stm32f4-discovery-ledblink/.cargo/: config.toml
stm32f4-discovery-ledblink/src/: main.rs  main.rs~
stm32f4-discovery/ledblink/: Embed.toml
stm32f4-discovery/ledblink/src/: main.rs
