[package]
name = "stm32f4-discovery-ledblink"
version = "0.1.0"
authors = ["Kazushige Taniguchi <taniguchi.kazushige@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
rtt-target = { version = "0.5.0" }

[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f407", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
