[package]
name = "cm7_ledblink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["log-rtt", "smps", "example-smps", "hsem", "log-level-debug"]
default = ["smps", "example-smps", "hsem"]
log-semihost = []
log-rtt = []
log-itm = []
smps = []
hsem = []
example-smps = []
example-ldo = []
log-level-debug = []

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
log = "0.4"
cfg-if="1.0.0"
panic-halt = "0.2.0"
cortex-m-log = { version = "0.8.0", features = ["itm", "semihosting", "log-integration"] }
# stm32h7xx-hal = { version = "0.15.1", features = [ "stm32h747cm7", "rt" ] }
stm32h7xx-hal = { path = "../../../../stm32h7xx-hal", features = [ "stm32h747cm7", "rt", "log" ] }
rtt-target = { version = "0.5.0" }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
panic-semihosting = "0.6"
cortex-m-semihosting = { version = "0.5.0" }
panic-itm = { version = "~0.4.1" }
